# asyncroscopy

./: .gitignore  README.md  pyproject.toml  tango_database.db
.github/workflows/: deploy.yml  pages.yaml  test.yaml
asyncroscopy/: Microscope.py  ThermoDigitalTwin.py  ThermoDigitalTwinBeta.py  ThermoHaadfEdsTwin.py  ThermoMicroscope.py
asyncroscopy/hardware/: CORRECTOR.py  SCAN.py  STAGE.py
asyncroscopy/mcp/: mcp_server.py
docs/: 404.md  ASYNCROSCOPY_MCP_IMPLEMENTATION.md  _config.yml  _toc.yml  add_detector.md  dev_guide.md  index.md  mcp_server.md  myst.yml  requirements.txt  upcoming_changes.md
docs/Adding_New_Hardware/: add_detector.md
docs/MCP/: asyncroscopy_mcp.md  building_an_mcp.md
notebooks/: 0_Client_tutorial.ipynb  0_Debugging_mode_tutorial.ipynb  10_Smart_Tilt.ipynb  11_Current_Series.ipynb  1_Client_AS.ipynb  1_Client_tutorial.ipynb  2_Aberrations.ipynb  2_Client_AS.ipynb  3_Sample_map.ipynb  3_Track_blast.ipynb  4_Digital_Twin_EDS.ipynb  4_Digital_Twin_HAADF-EDS.ipynb  5_Real_EDS.ipynb  5_Spectroscopy_EDS.ipynb  6_Sample_map.ipynb  6_Track_blast.ipynb  7_Digital_Twin_HAADF-EDS.ipynb  7_best header.ipynb  8_Digital_Twin_Tilt.ipynb  9_MCP_Server_Tutorial.ipynb  Digital_Twin.ipynb
scripts/: 2_register_devices.py  start_mcp_server_cli.py  start_mcp_with_twin.py
stubs/: acknowledgement.md  autoscript_core-1.0.0-py3-none-any.whl  autoscript_tem_microscope_client-1.15.0-py3-none-any.whl  autoscript_tem_microscope_client_tests-1.15.0-py3-none-any.whl  autoscript_tem_snippets_tests-1.15.0-py3-none-any.whl  autoscript_tem_toolkit-1.15.0-py3-none-any.whl  requirements.txt  thermoscientific_logging-1.0.0-py3-none-any.whl
tests/: conftest.py  test_SCAN.py  test_digital_twin.py  test_mcp_server.py  test_microscope.py  test_thermo_microscope.py
(+3 files in other folders)
